correct code alignment

--- a/style/shinobi.css
+++ b/style/shinobi.css
@@ -115,6 +115,7 @@ h1, h2, h3, body{
   font-weight: normal;
 }
 .remark-code, .remark-inline-code {
+  text-align: left;
   font-family: 'Source Code Pro', 'Lucida Console', Monaco, monospace;
   color: var(--code-text-color);
   background-color: var(--code-background);
